Node->Vertex->Node seems to be fully working now
Probably only needs proper "equals" methods for all node subclasses, so that we can easily check whether something is missing